[project]
name = "pydbisam"
version = "1.2.1"
description = "Read DBISAM database tables."
readme = "README.md"
requires-python = ">=3.9"
license = "ISC"
authors = [
  {name = "Aaron Linville", email = "aaron@linville.org"},
]

keywords = ["dbisam"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "black==25.1.*",
  "build==1.2.*",
  "ruff==0.11.*",
  "twine==6.1.*",
]

[project.urls]
Homepage = "https://github.com/linville/pydbisam/"
Changelog = "https://github.com/linville/pydbisam/blob/main/CHANGELOG.md"
Issues = "https://github.com/linville/pydbisam/issues"

[project.scripts]
pydbisam = "pydbisam.cli:main"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
