[project]
name = "pydbisam"
version = "1.2.1"
description = "Read DBISAM database tables."
readme = "README.md"
requires-python = ">=3.10"
license = "ISC"
authors = [
  {name = "Aaron Linville", email = "aaron@linville.org"},
]

keywords = ["dbisam"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Utilities",
]

[build-system]
requires = ["setuptools >= 80.9"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "black==25.9.*",
  "build==1.3.*",
  "ruff==0.14.*",
  "twine==6.2.*",
]

[project.urls]
Homepage = "https://github.com/linville/pydbisam/"
Changelog = "https://github.com/linville/pydbisam/blob/main/CHANGELOG.md"
Issues = "https://github.com/linville/pydbisam/issues"

[project.scripts]
pydbisam = "pydbisam.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
]
